// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add embeds 1`] = `
Object {
  "blocks": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [
        Object {
          "key": 0,
          "length": 1,
          "offset": 0,
        },
      ],
      "inlineStyleRanges": Array [],
      "key": "g0000",
      "text": " ",
      "type": "unstyled",
    },
  ],
  "entityMap": Object {
    "0": Object {
      "data": Object {
        "height": 200,
        "src": "https://embed.simplecast.com/a1f11d11",
        "type": "simplecast",
        "url": "https://embed.simplecast.com/a1f11d11",
      },
      "mutability": "MUTABLE",
      "type": "embed",
    },
  },
}
`;

exports[`should add multiple embeds to text 1`] = `
Object {
  "blocks": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [
        Object {
          "key": 0,
          "length": 1,
          "offset": 13,
        },
        Object {
          "key": 0,
          "length": 1,
          "offset": 33,
        },
      ],
      "inlineStyleRanges": Array [],
      "key": "g0000",
      "text": "New podcast!   it is really cool  ",
      "type": "unstyled",
    },
  ],
  "entityMap": Object {
    "0": Object {
      "data": Object {
        "height": 200,
        "src": "https://embed.simplecast.com/a1f11d11",
        "type": "simplecast",
        "url": "https://embed.simplecast.com/a1f11d11",
      },
      "mutability": "MUTABLE",
      "type": "embed",
    },
  },
}
`;
